@@ -384,10 +384,9 @@ crypto_recv(
 				rval = RV_LEN;
 			} else if (tstamp == 0) {
 				rval = RV_TSP;
-			} else if (peer->crypto) {
-				rval = RV_DUP;
 			} else {
-				peer->crypto = temp;
+				if (!peer->crypto)
+					peer->crypto = temp;
 				if (ntohl(pkt[i + 1]) != 0)
 					peer->assoc = ntohl(pkt[i + 1]);
 				rval = RV_OK;
