@@ -1,5 +1,13 @@
 2001-04-20  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ntpd/ntp_proto.c (receive): In the AM_NEWBCL case, return in all
+	cases at the end.
+	* ntpd/ntp_peer.c (newpeer): Check cast_flags against MDF_BCLNT,
+	not against MDF_BCAST.
+	* ntpd/ntp_loopfilter.c (local_clock): Lose debug info.
+	* ntpd/ntp_crypto.c (crypto_recv): Bugfix.
+	From: Dave Mills.
+
 	* configure.in: 4.0.99k27
 
 	* ntpd/ntp_loopfilter.c (local_clock): Check clock_panic > 0.
